# rust-rinha-e2

./: .gitignore  Cargo.toml  LICENSE  README.md  check_result.sh  docker-compose.yml  dockerfile  nginx.conf
migrations/: 2_create_transactions_table.sql  3_create_balance_table.sql  4_create_update_balance_function.sql  5_create_transaction_trigger.sql  6_insert_balance_seed.sql
src/: main.rs  types.rs
