[package]
name = "rust-rinha-e2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
clap = { version = "4.5.2", features = ["env", "derive"] }
dotenv = "0.15.0"
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.7.1",  features = ["runtime-tokio", "postgres", "json"] }
tokio = { version= "1.28.2",  features = ["macros", "rt-multi-thread"] }
